TestSuite/errors/err0213.pas
function f(var self: integer): integer; extensionmethod := self;

begin
  1.f;
end.